k8s/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo
spec:
  ingressClassName: traefik
  rules:
    - host: todo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-api
                # 80, le port du Service, jamais 3000 qui est celui du conteneur.
                port:
                  number: 80
